# agentpay-trust-pass

./: .env.example  .gitignore  PRODUCT.md  README.md  details.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  untitled.pen
apps/cli/: package.json
apps/mcp-server/: package.json
apps/report-api/: package.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
contracts/agent-pay-registry/: Cargo.toml
contracts/agent-pay-registry/scripts/: build-contract.sh  deploy-testnet.sh  record-decision-testnet.sh  record-receipt-testnet.sh
contracts/agent-pay-registry/src/: contract.rs  lib.rs
contracts/agent-pay-registry/tests/: agent_pay_registry_tests.rs  contract_runtime_tests.rs
deploy/agentpay/: README.md  activate-web-release.sh  agentpay-mcp.service  agentpay-report-api.service  agentpay.env.example  nginx.conf
docs/: HACKATHON.md  dorahacks-submission.md  live-capabilities.md  live-demo-transcript.md  live-demo.md  real-product-constraints.md  user-surfaces.md  x402-self-hosted.md
docs/agents/: INTEGRATE.md  SKILL.md
docs/handoffs/: 2026-07-16-agentpay-ui-handoff.md
docs/research/: lifelike-ui-animation.md
docs/security/: agentpay-agent-security-scan-2026-06-24.md
examples/: testnet-payment-policy.json
scripts/: _ui-look.mjs  casper-funding-status.ts  demo-inputs.ts  dev.sh  e2e-agent-cli.ts  e2e-auditor-ui.ts  e2e-trust-ui.ts  e2e-ui-drive.ts  smoke.sh  submission-deploy-registry.ts  submission-evidence.ts  submission-proof.ts  submission-readiness.ts  verify-production.ts  x402-buy.ts  x402-buyer.ts
(+257 files in other folders)
